--- a/Resources/Private/Partials/Common/Header.html
+++ b/Resources/Private/Partials/Common/Header.html
@@ -34,9 +34,15 @@
         </f:if>
         <f:if condition="{sysDetail.typo3version}<12">
             <f:if condition="{sysDetail.targetVersion}!='11.x'">
-                <option value="10.x"><f:translate key="option.label11"/></option>
+                <option value="11.x"><f:translate key="option.label11"/></option>
+            </f:if>
+        </f:if>
+        <f:if condition="{sysDetail.typo3version}<13">
+            <f:if condition="{sysDetail.targetVersion}!='12.x'">
+                <option value="12.x"><f:translate key="option.label12"/></option>
             </f:if>
         </f:if>
     </select>
+    <input type="checkbox" name="tx_nsextcompatibility_tools_nsextcompatibilitynsextcompatibility[checkGitHub]" value="1" /> GitHub mit checken
 </f:form>
 <p class="upgradeLabel"><f:translate key="typo3UpgradeOptLabel"/></p>
