--- a/Resources/Private/Partials/ExtTable.html
+++ b/Resources/Private/Partials/ExtTable.html
@@ -34,7 +34,14 @@
                     <th  class="text-center"><f:translate key="compatible11"/></th>
                 </f:if>
             </f:if>
+            <f:if condition="{sysDetail.typo3version}<13">
+                <f:if condition="{sysDetail.targetVersion}>=12">
+                    <th  class="text-center"><f:translate key="compatible12"/></th>
+                </f:if>
+            </f:if>
             <th class="text-center"><f:translate key="currentVersion"/></th>
+            <th class="text-center"><f:translate key="newVersion"/></th>
+            <th class="text-center">GitHub Ver.</th>
             <th class="text-center"><f:translate key="state"/></th>
         </tr>
     </thead>
@@ -43,12 +50,13 @@
 	    <f:for each="{extensionlist}" as="extension" iteration="iter">
 	        <f:if condition="{extension.key} != 'ns_ext_compatibility'">
 	            <tr>
-	                <td>{iter.cycle}</td>
+	                <td><img src="{extension.icon}" width="24" />
+                        {iter.cycle}</td>
 	                <td class="ext-overview" data-toggle="modal" data-target="#nsModel" title="{f:translate(key: 'viewDetailTooltip',arguments: {extension: extension.key})}" data-uri="{f:uri.action(action: 'detail', arguments: {extKey: extension.key,targetVersion:sysDetail.targetVersion}, controller: 'nsextcompatibility')}">
 	                    <f:format.crop maxCharacters="25" append="...">{extension.title}</f:format.crop>
 	                </td>
 	                <td class="ext-overview" data-toggle="modal" data-target="#nsModel" title="{f:translate(key: 'viewDetailTooltip',arguments: {extension: extension.key})}" data-uri="{f:uri.action(action: 'detail', arguments: {extKey: extension.key,targetVersion:sysDetail.targetVersion}, controller: 'nsextcompatibility')}">
-	                    {extension.key}
+	                  {extension.key}<br/>{extension.composer}
 	                </td>
 
 		            <f:if condition="{sysDetail.typo3version}<7">
@@ -201,7 +209,34 @@
                             </f:if>
                         </f:if>
                     </f:if>
+                    <f:if condition="{sysDetail.typo3version}<13">
+                        <f:if condition="{sysDetail.targetVersion}>=12">
+                            <f:if condition="{extension.customExt} != 'true'">
+                                <f:then>
+                                    <f:if condition="{extension.compatible12}">
+                                        <f:then>
+                                            <td class="compatible text-center">
+                                                <span class="hide-label"><f:translate key="yes"/></span>
+                                                <img src="../typo3conf/ext/ns_ext_compatibility/Resources/Public/Backend/Icons/righ-icon.png" width="12" height="12" />
+                                            </td>
+                                        </f:then>
+                                        <f:else>
+                                            <td class="incompatible text-center">
+                                                <span class="hide-label"><f:translate key="no"/></span>
+                                                <img src="../typo3conf/ext/ns_ext_compatibility/Resources/Public/Backend/Icons/crose-icon.png" width="12" height="12" />
+                                            </td>
+                                        </f:else>
+                                    </f:if>
+                                </f:then>
+                                <f:else>
+                                    <td class="incompatible text-center"><f:translate key="unknown" />
+                                </f:else>
+                            </f:if>
+                        </f:if>
+                    </f:if>
 		            <td class="text-center" data-toggle="modal" data-target="#extModel-{iter.cycle}">{extension.version}</td>
+                    <td class="text-center" data-toggle="modal" data-target="#extModel-{iter.cycle}">{extension.newVersion}</td>
+                    <td class="text-center" data-toggle="modal" data-target="#extModel-{iter.cycle}">{extension.github -> f:format.html()}</td>
 		            <td class="text-center">
 			           <span class="ext-status-{extension.state}">{extension.state}</span>
 		            </td>
