--- a/Resources/Private/Templates/nsextcompatibility/List.html
+++ b/Resources/Private/Templates/nsextcompatibility/List.html
@@ -1,10 +1,11 @@
 <f:layout name="Default" />
   
 <f:section name="Content">
-    <p><f:link.action action="updateExtensionList" class="btn btn-primary">Extension-Liste aktualisieren</f:link.action></p>
-    <br />
     <f:render partial="Common/Main" arguments="{overviewReport:overviewReport,sysDetail:sysDetail,targetSystemRequirement:targetSystemRequirement}"/>
-
+    <p><b>
+        ACHTUNG: in TYPO3 11 muss man die Tabelle tx_extensionmanager_domain_model_extension sich aus einem
+        TYPO3 10-Projekt kopieren (vorher aktualisieren!) und dann im Install-Tool vervollständigen.
+    </b></p><br/>
     <div class="ext-report-wrapper">
         <h2><f:translate key="extensionlist"/></h2>
         <f:comment>
