--- a/Resources/Private/Partials/Common/Header.html
+++ b/Resources/Private/Partials/Common/Header.html
@@ -17,6 +17,11 @@
                 <option value="12.x"><f:translate key="option.label12"/></option>
             </f:if>
         </f:if>
+        <f:if condition="{sysDetail.typo3version}<14">
+            <f:if condition="{sysDetail.targetVersion}!='13.x'">
+                <option value="13.x"><f:translate key="option.label13"/></option>
+            </f:if>
+        </f:if>
     </select>
     <input type="checkbox" name="tx_nsextcompatibility_tools_nsextcompatibilitynsextcompatibility[checkGitHub]" value="1" /> GitHub mit checken
 </f:form>
