--- a/Resources/Private/Partials/ExtTable.html
+++ b/Resources/Private/Partials/ExtTable.html
@@ -39,6 +39,11 @@
                     <th  class="text-center"><f:translate key="compatible12"/></th>
                 </f:if>
             </f:if>
+            <f:if condition="{sysDetail.typo3version}<14">
+                <f:if condition="{sysDetail.targetVersion}>=13">
+                    <th  class="text-center"><f:translate key="compatible13"/></th>
+                </f:if>
+            </f:if>
             <th class="text-center"><f:translate key="currentVersion"/></th>
             <th class="text-center"><f:translate key="newVersion"/></th>
             <th class="text-center">GitHub Ver.</th>
@@ -214,6 +219,31 @@
                             <f:if condition="{extension.customExt} != 'true'">
                                 <f:then>
                                     <f:if condition="{extension.compatible12}">
+                                        <f:then>
+                                            <td class="compatible text-center">
+                                                <span class="hide-label"><f:translate key="yes"/></span>
+                                                <img src="/typo3conf/ext/ns_ext_compatibility/Resources/Public/Backend/Icons/righ-icon.png" width="12" height="12" />
+                                            </td>
+                                        </f:then>
+                                        <f:else>
+                                            <td class="incompatible text-center">
+                                                <span class="hide-label"><f:translate key="no"/></span>
+                                                <img src="/typo3conf/ext/ns_ext_compatibility/Resources/Public/Backend/Icons/crose-icon.png" width="12" height="12" />
+                                            </td>
+                                        </f:else>
+                                    </f:if>
+                                </f:then>
+                                <f:else>
+                                    <td class="incompatible text-center"><f:translate key="unknown" />
+                                </f:else>
+                            </f:if>
+                        </f:if>
+                    </f:if>
+                    <f:if condition="{sysDetail.typo3version}<14">
+                        <f:if condition="{sysDetail.targetVersion}>=13">
+                            <f:if condition="{extension.customExt} != 'true'">
+                                <f:then>
+                                    <f:if condition="{extension.compatible13}">
                                         <f:then>
                                             <td class="compatible text-center">
                                                 <span class="hide-label"><f:translate key="yes"/></span>
